@@ -5,18 +5,12 @@ cache:
     - $HOME/local
 
 sudo: required
-#group: deprecated-2017Q1
-
-dist: trusty
 
 compiler:
   - gcc-4.8
 
 addons:
   apt:
-#    hostname: travistest
-#    sources:
-#      - ubuntu-toolchain-r-test
     packages:
       - cmake
       - cmake-data
@@ -26,8 +20,6 @@ addons:
       - swig
       - graphviz
       - munge
-# note that we need to build openmpi and STAT's examples with gfortran installed
-# however, having this package causes dyninst to fail to build
       - gfortran
       - gdb
 
@@ -40,10 +32,24 @@ before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
   - sudo apt-get install -qq g++-4.8
+#  - sudo add-apt-repository ppa:apokluda/boost1.53 --yes
+#  - sudo apt-get update
+#  - sudo apt-get install libboost1.53-dev
+#  - sudo apt-get install libboost-system1.53-dev
+#  - sudo apt-get install libboost-regex1.53-dev
+#  - sudo apt-get install libboost-filesystem1.53-dev
+#  - sudo apt-get install libboost-thread1.53-dev
+#  - sudo apt-get install libboost-timer1.53-dev
+#  - sudo apt-get install libboost-date-time1.53-dev
   - export CC="gcc-4.8"
   - export CXX="g++-4.8"
+  - ls -l $HOME/local/lib
   - eval $(./scripts/travis-dep-builder.sh --printenv)
-  - ./scripts/travis-dep-builder.sh --cachedir=$HOME/local/.cache
+#  - rm -rf $HOME/local
+  # travis has a 50 minute timeout for any single command, so we break up the build so it will partially cache as needed:
+  - ./scripts/travis-dep-builder.sh --cachedir=$HOME/local/.cache --components=ompi
+  - ./scripts/travis-dep-builder.sh --cachedir=$HOME/local/.cache --components=other
+  - ./scripts/travis-dep-builder.sh --cachedir=$HOME/local/.cache --components=dyninst
 
 script:
   - export CC=gcc-4.8
@@ -51,11 +57,12 @@ script:
   - ls -l $HOME/local
   - ls -l $HOME/local/lib
   - ls -l $HOME/local/bin
+  - ls -l $HOME/local/etc
   - ls -l $HOME/local/include
   - cd $HOME/build/LLNL/STAT
   - ./bootstrap
   - export LDFLAGS=-Wl,-no-as-needed
-  - ./configure --prefix=$HOME/stat --with-stackwalker=$HOME/local --with-mrnet=$HOME/local --with-graphlib=$HOME/local --with-launchmon=$HOME/local --with-libdwarf=$HOME/local --with-libiberty=$HOME/local --enable-debug || cat config.log
+  - ./configure --prefix=$HOME/stat --with-stackwalker=$HOME/local/dyninst --with-mrnet=$HOME/local --with-graphlib=$HOME/local --with-launchmon=$HOME/local --enable-debug || cat config.log
   - make && make install
 
 after_script:
@@ -73,7 +80,6 @@ after_script:
   - echo -e "Host $HOSTNAME\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 #  - export MRNET_OUTPUT_LEVEL=5
   - echo 0 | sudo tee /proc/sys/kernel/yama/ptrace_scope
-  - cat $HOME/stat/bin/stat-cl
   - $HOME/stat/share/stat/examples/bin/rank_test 10 & $HOME/stat/bin/stat-cl -s 2 -l FE -l BE -L $HOME -I $!
   - cat stat_results/output.0000/output.0000.top
   - cat stat_results/output.0000/output.0000.fulltop
@@ -95,7 +101,16 @@ after_script:
   - cat stat_results/mpi_ringtopo.0000/02_mpi_ringtopo.0000.2D.dot
   - cat stat_results/mpi_ringtopo.0000/03_mpi_ringtopo.0000.2D.dot
   - cat stat_results/mpi_ringtopo.0000/04_mpi_ringtopo.0000.3D.dot
-  - $HOME/stat/bin/stat-cl -s 5 -l FE -l BE -L $HOME -C /home/travis/local/bin/mpirun -n 4 $HOME/stat/share/stat/examples/bin/mpi_ringtopo 40
+  - $HOME/stat/bin/stat-cl -s 5 -l FE -l BE -L $HOME -C mpirun -n 4 $HOME/stat/share/stat/examples/bin/mpi_ringtopo 40
+  - ps x | grep mpirun | grep -v grep | cut -f 1 -d " " | xargs kill -CONT
   - sleep 40
+  - cat stat_results/mpi_ringtopo.0001/mpi_ringtopo.0001.top
+  - cat stat_results/mpi_ringtopo.0001/mpi_ringtopo.0001.fulltop
+  - cat stat_results/mpi_ringtopo.0001/00_mpi_ringtopo.0001.2D.dot
+  - cat stat_results/mpi_ringtopo.0001/01_mpi_ringtopo.0001.2D.dot
+  - cat stat_results/mpi_ringtopo.0001/02_mpi_ringtopo.0001.2D.dot
+  - cat stat_results/mpi_ringtopo.0001/03_mpi_ringtopo.0001.2D.dot
+  - cat stat_results/mpi_ringtopo.0001/04_mpi_ringtopo.0001.3D.dot
 #  The script test currently fails as openmpi does not support reattach when launched under a debugger (https://github.com/open-mpi/ompi/issues/3178)
+#  The script test may also hang with openmpi-2.0.3. This appears to be a race condition when deleting the stat_fe object
   - $HOME/stat/bin/stat-script $HOME/stat/share/stat/examples/bin/script_test.py
